--- a/apps/site/public/reset.css
+++ b/apps/site/public/reset.css
@@ -127,3 +127,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+html,
+body,
+#root {
+  position: relative;
+  height: 100%;
+}
