--- a/apps/site/public/reset.css
+++ b/apps/site/public/reset.css
@@ -90,6 +90,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -133,4 +134,10 @@ body,
 #root {
   position: relative;
   min-height: 100vh;
+}
+
+a,
+a:visited,
+a:active {
+  text-decoration: none;
 }
