finish desktop version

--- a/apps/landing/styles/index.scss
+++ b/apps/landing/styles/index.scss
@@ -5,6 +5,8 @@
 @import "./feature-screen-1.scss";
 @import "./friendly-community-screen.scss";
 @import "./feature-screen-2.scss";
+@import "./integration-screen.scss";
+@import "./lets-make-crypto-global.scss";
 
 body {
     background-color: $black;
@@ -13,4 +15,16 @@ body {
 
 h1, h2, img {
     pointer-events: none;
+}
+
+footer {
+    margin-top: 110px;
+    width: 100%;
+    border-top: 1px solid $gray-108;
+
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
 }
