--- a/apps/landing/styles/feature-screen-1.scss
+++ b/apps/landing/styles/feature-screen-1.scss
@@ -7,8 +7,7 @@
     width: 100%;
 
     .features-wrapper {
-        width: 90%;
-        padding: 0 150px;
+        width: $section-max-width;
 
         display: grid;
         grid-template-columns: 1fr 1fr;
