--- a/apps/landing/styles/friendly-community-screen.scss
+++ b/apps/landing/styles/friendly-community-screen.scss
@@ -2,16 +2,21 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
+    overflow: hidden;
 
     margin-top: 200px;
     height: 555px;
 
-    > h2 {
+    .img-sm {
+        display: none;
+    }
+
+    h2 {
         position: absolute;
         top: -3000px;
     }
 
-    & > .community-wrapper {
+    .community-wrapper {
         position: relative;
 
         width: $section-max-width;
@@ -37,7 +42,7 @@
             gap: 25px;
 
             h6 {
-                color: var(--Main-White, #FFF);
+                color: $white;
                 font-family: DM Sans;
                 font-size: 16px;
                 font-style: normal;
@@ -54,6 +59,68 @@
 
                 width: 195px;
                 padding-left: 30px;
+            }
+        }
+    }
+}
+
+@include mobile {
+    #best-community-section {
+        margin-top: 0;
+        padding: 310px 10px 0 10px;
+        position: relative;
+        width: 100%;
+        height: auto;
+
+        .img-lg {
+            display: none;
+        }
+
+        .img-sm {
+            display: block;
+            position: absolute;
+
+            top: -270px;
+            left: calc(50% - 193px);
+        }
+
+        & > div {
+            padding: 30px;
+            background-color: $gray-108;
+            border-radius: 25px;
+
+            position: relative;
+            width: 100%;
+
+            & > h2 {
+                position: relative;
+                top: auto;
+
+                color: $white;
+                font-family: $header-font;
+                font-size: 95px;
+                line-height: 80%;
+                text-transform: uppercase;
+            }
+
+            .community-wrapper {
+                width: auto;
+                display: flex;
+                flex-flow: column nowrap;
+                gap: 15px;
+
+                hgroup {
+                    top: auto;
+
+                    h6 {
+                        width: auto;
+                        letter-spacing: -1px;
+                    }
+
+                    a {
+                        width: 100%;
+                    }
+                }
             }
         }
     }
