--- a/apps/landing/styles/no-install-screen.scss
+++ b/apps/landing/styles/no-install-screen.scss
@@ -58,6 +58,10 @@
 
         width: 100%;
 
+        & > h2 {
+            display: none;
+        }
+
         & > div {
             width: $section-max-width;
             display: grid;
@@ -90,6 +94,65 @@
                         width: 21px;
                         height: 20px;
                     }
+                }
+            }
+        }
+    }
+}
+
+@include mobile {
+    #no-install-screen {
+        margin-top: 40px;
+        padding: 0 10px;
+        height: auto;
+
+        .running-text {
+            display: none;
+            height: auto;
+
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        & > hgroup {
+            background-color: $gray-108;
+            border-radius: 25px;
+
+            & > h2 {
+                font-family: $header-font;
+                font-size: 95px;
+                line-height: 80%;
+                color: $white;
+                text-align: center;
+                text-transform: uppercase;
+
+                display: block; 
+                width: 100%;
+                padding: 50px 0 30px 0;
+            }
+
+            & > div {
+                & > span {
+                    display: none;
+                }
+
+                width: 100%;    
+                display: flex;
+                flex-flow: column nowrap;
+                gap: 30px;
+
+                padding: 30px;
+
+                background-color: $gray-115;
+                border-radius: 25px;
+
+                h3 {
+                    font-size: 36px !important;
+                }
+
+                a {
+                    align-self: stretch;
+                    width: auto !important;
                 }
             }
         }
