--- a/apps/landing/styles/index.scss
+++ b/apps/landing/styles/index.scss
@@ -1,16 +1,13 @@
 @import "./reset.scss";
 @import "./vars.scss";
-@import "./hero-screen.scss";
-@import "./no-install-screen.scss";
-@import "./feature-screen-1.scss";
-@import "./friendly-community-screen.scss";
-@import "./feature-screen-2.scss";
-@import "./integration-screen.scss";
-@import "./lets-make-crypto-global.scss";
 
 body {
     background-color: $black;
     position: relative;
+
+    #overlay-nav {
+        display: none;
+    }
 }
 
 h1, h2, img {
@@ -28,3 +25,11 @@ footer {
     justify-content: center;
     padding: 30px 10px;
 }
+
+@import "./hero-screen.scss";
+@import "./no-install-screen.scss";
+@import "./feature-screen-1.scss";
+@import "./friendly-community-screen.scss";
+@import "./feature-screen-2.scss";
+@import "./integration-screen.scss";
+@import "./lets-make-crypto-global.scss";
