add 'unsafe-inline' to CSP, make it only connect to MM

--- a/apps/landing/styles/lets-make-crypto-global.scss
+++ b/apps/landing/styles/lets-make-crypto-global.scss
@@ -92,6 +92,7 @@
         hgroup {
             h4 {
                 font-size: 95px;
+                padding: 0 10px;
             }
 
             div {
