fix TOK in the site, add FAQ section to landing, add audit note

--- a/apps/landing/styles/index.scss
+++ b/apps/landing/styles/index.scss
@@ -31,5 +31,6 @@ footer {
 @import "./feature-screen-1.scss";
 @import "./friendly-community-screen.scss";
 @import "./feature-screen-2.scss";
+@import "./faq-screen.scss";
 @import "./integration-screen.scss";
 @import "./lets-make-crypto-global.scss";
