replace discord with telegram

--- a/apps/landing/styles/friendly-community-screen.scss
+++ b/apps/landing/styles/friendly-community-screen.scss
@@ -59,6 +59,10 @@
 
                 width: 195px;
                 padding-left: 30px;
+
+                span {
+                    text-wrap: nowrap;
+                }
             }
         }
     }
