add DAO section

--- a/apps/landing/styles/index.scss
+++ b/apps/landing/styles/index.scss
@@ -26,6 +26,7 @@ footer {
     padding: 30px 10px;
 }
 
+@import "./dao-section.scss";
 @import "./hero-screen.scss";
 @import "./no-install-screen.scss";
 @import "./feature-screen-1.scss";
