--- a/apps/landing/styles/hero-screen.scss
+++ b/apps/landing/styles/hero-screen.scss
@@ -320,9 +320,26 @@
                     }
                 }
 
-                & > a {
-                    @include btn();
-                    background-color: $chartreuse;
+                & > .btn-wrapper {
+                    display: flex;
+                    flex-flow: column;
+                    gap: 20px;
+
+                    & > a {
+                        @include btn();
+    
+                        &:nth-of-type(1) {
+                            background-color: $dark-blue;
+
+                            & > span {
+                                color: white;
+                            }
+                        }
+    
+                        &:nth-of-type(2) {
+                            background-color: $chartreuse;
+                        }
+                    }
                 }
             }
         }
